--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "expo": "~50.0.6",
+    "expo-constants": "~15.4.5",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-splash": "^0.0.4",
+    "screen": "^0.2.10",
+    "styled-components": "^6.1.8",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
