--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -14,7 +14,10 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-webview": "^13.8.1",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
