integrated DragScreenSelection into BrowsingScreen

--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -13,10 +13,10 @@
     "expo-status-bar": "~1.11.1",
     "movie-trailer": "^3.2.2",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-webview": "^13.7.1",
+    "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.3.0",
     "react-player": "^2.14.1",
     "react-youtube": "^10.1.0",
