--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -1,30 +1,15 @@
 {
-  "name": "group1mod5proj",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
     "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~50.0.6",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-popup-menu": "^0.16.1",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "prettier": "^3.2.5"
-  },
-  "private": true
+    "expo": "^49.0.22",
+    "expo-status-bar": "^1.11.1",
+    "metro": "^0.80.5",
+    "metro-core": "^0.80.5",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "react-native": "^0.73.4",
+    "react-native-gesture-handler": "^2.15.0"
+  }
 }
