--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "group1mod5proj",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
-    "expo": "~50.0.6",
-    "expo-constants": "~15.4.5",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "formik": "^2.4.5",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-splash": "^0.0.4",
-    "screen": "^0.2.10",
-    "styled-components": "^6.1.8",
-    "@react-native-community/datetimepicker": "7.6.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.21",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "~48.0.15",
+    "expo-checkbox": "~2.3.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-splash-screen": "^0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "metro": "^0.80.5",
+    "metro-core": "^0.80.5",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "react": "^18.2.0",
+    "react-native": "^0.71.14",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0"
+  }
 }
