--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -17,6 +17,9 @@
     "react-native": "^0.71.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-swipe-up-down": "^1.2.0",
+    "react-native-webview": "^11.26.0",
+    "react-native-youtube-iframe": "^2.3.0"
   }
 }
