Updated navigation and app will be starting with welcome page when launched. Created a context.js for navigation too, feel free to use/amend it.

--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -10,9 +10,11 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
+    "i": "^0.3.7",
     "metro": "^0.80.5",
     "metro-core": "^0.80.5",
     "metro-react-native-babel-transformer": "^0.77.0",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-native": "^0.71.14",
     "react-native-gesture-handler": "~2.9.0",
