--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -5,21 +5,21 @@
     "@react-navigation/stack": "^6.3.21",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~48.0.15",
-    "expo-checkbox": "~2.3.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-splash-screen": "^0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~50.0.0",
+    "expo-checkbox": "^2.7.0",
+    "expo-linear-gradient": "^12.7.1",
+    "expo-splash-screen": "^0.26.4",
+    "expo-status-bar": "^1.11.1",
     "metro": "^0.80.5",
     "metro-core": "^0.80.5",
     "metro-react-native-babel-transformer": "^0.77.0",
     "react": "^18.2.0",
-    "react-native": "^0.71.14",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native": "^0.73.4",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-swipe-up-down": "^1.2.0",
-    "react-native-webview": "^11.26.0",
+    "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.3.0"
   }
 }
