--- a/group1mod5proj/package.json
+++ b/group1mod5proj/package.json
@@ -14,7 +14,7 @@
     "metro-core": "^0.80.5",
     "metro-react-native-babel-transformer": "^0.77.0",
     "react": "^18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
